[tool.poetry]
name = "lnd_pyshell"
version = "0.1.5"
description = ""
authors = ["Kornpow <test@email.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
requests = "^2.24.0"
pandas = "^1.1.2"
rich = "^6.2.0"


[tool.poetry.dev-dependencies]
pytest = "^3.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
lnd_pyshell = "lnd_pyshell.lnd_rest:main"
