[tool.poetry]
name = "lnd_pyshell"
version = "0.1.6"
description = ""
authors = ["Kornpow <test@email.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
rich = "^7.0.0"
pandas = "^1.1.2"
pyqrcode = "^1.2.1"
requests = "^2.24.0"


[tool.poetry.dev-dependencies]
pytest = "^3.4"


[tool.poetry.scripts]
#lnd_pyshell = "lnd_pyshell.client:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

